src/test/deca/context/invalid/created/binary_exp/op_arith/modulo_bool_int.deca
// Description :
//    test modulo entre un boolen et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type bool. Or les opérandes d’un modulo doivent être de type ‘int’

{
boolean a;
int b;
int c = a % b;
}
